# kattis

./: .gitignore  CMakeLists.txt  hailstone-test.cpp  hailstone-testcase-generation.cpp  hailstone.cpp  thegrandadventure.cpp  touchscreenkeyboard.cpp  trainpassengers.cpp  whatdoesthefoxsay.cpp  yoda.cpp
testcases/: hailstone.txt
