cmake_minimum_required(VERSION 3.19)
project(kattis)

set(CMAKE_CXX_STANDARD 14)

add_executable(kattis main.cpp)
add_executable(yoda yoda.cpp)
add_executable(whatdoesthefoxsay whatdoesthefoxsay.cpp)
add_executable(trainpassengers trainpassengers.cpp)
add_executable(touchscreenkeyboard touchscreenkeyboard.cpp)
add_executable(thegrandadventure thegrandadventure.cpp)
add_executable(hailstone hailstone.cpp)
add_executable(hailstone-iterative hailstone-iterative.cpp)
add_executable(hailstone-test hailstone-test.cpp)
add_executable(hailstone-testcase-generation hailstone-testcase-generation.cpp)